Last update svg

--- a/src/my_library.html
+++ b/src/my_library.html
@@ -14,5 +14,6 @@
     <include src="./partials/my_lib-header.html"></include>
     <include src="./partials/main.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./sass/layout/_footer.scss"></include>
 </body>
 </html>
