--- a/src/my_library.html
+++ b/src/my_library.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <include src="./partials/my_lib-header.html"></include>
-    <include src="./partials/main.html"></include>
+    <include src="./partials/my_lib-main.html"></include>
     <include src="./partials/footer.html"></include>
 </body>
 </html>
