add settings for custom pagination

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/main.html"></include>
     <include src="./partials/loader.html"></include>
+    <div class="list" id="list"></div>
+    <div class="pagenumbers" id="pagination"></div>
     <div id="tui-pagination-container" class="tui-pagination"></div>
     <include src="./partials/film-modal-window.html"></include>
     <include src="./partials/team-modal-window.html"></include>
