--- a/src/my_library.html
+++ b/src/my_library.html
@@ -14,6 +14,8 @@
     <include src="./partials/my_lib-header.html"></include>
     <include src="./partials/my_lib-main.html"></include>
     <include src="./partials/footer.html"></include>
+    
+    <include src="./partials/film-modal-window.html"></include>
     <include src="./partials/team-modal-window.html"></include>
     <include src="./partials/loader.html"></include>
 
