--- a/src/my_library.html
+++ b/src/my_library.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filmoteka</title>
-    <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
-    rel="stylesheet">
+    <link rel="icon" href="/src/favicon.ico" type="image/icon" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./my_library.js"></script>
 </head>
+
 <body>
     <include src="./partials/my_lib-header.html"></include>
     <include src="./partials/my_lib-main.html"></include>
     <include src="./partials/footer.html"></include>
-    
+
     <include src="./partials/film-modal-window.html"></include>
     <include src="./partials/team-modal-window.html"></include>
     <include src="./partials/loader.html"></include>
 
 </body>
+
 </html>
